--- a/client/src/Component/Style/Home.css
+++ b/client/src/Component/Style/Home.css
@@ -60,7 +60,7 @@
     background-color: #3636b7;
     margin-top: 131px;
 }
-input[type="text"] {
+.SearchMahal {
     width: 500px;
     height: 50px;
     text-align: center;
@@ -120,4 +120,50 @@ input[type="text"] {
     border-style: none;
     font-size: larger;
     cursor: pointer;
+}
+
+.Container {
+    margin-left: 130px;
+    padding: 30px;
+    background: #b3b3b342;
+    height: 557px;
+    width: 470px;
+    margin-top: 47px;
+    border-radius: 5px;
+}
+span.react-datepicker__year-read-view--down-arrow {
+    margin-top: -3px;
+}
+
+button {
+    /* width: 40px; */
+}
+button:hover{
+    /* background-color: #f80ea2; */
+    background-color: #3636b7;
+    color: white;
+    border-style: none;
+    border-radius: 5px;
+}
+
+/* html{
+    background-color: #3636b7;
+} */
+span {
+    color: #565656;
+    margin-top: -100px;
+    margin-right: 228px;
+}
+h2 {
+    color: #565656;
+    font-size: initial;
+}
+.searchbtn:hover {
+    background-color: #e32337;
+    color: white;
+    cursor: pointer;
+}
+button.viewmorebtn:hover{
+    background-color: #e32337;
+    color: white;
 }
