--- a/client/src/Component/Style/Login.css
+++ b/client/src/Component/Style/Login.css
@@ -90,11 +90,11 @@
     width: 200px;
     height: 40px;
     flex-shrink: 0;
+    color: white;
     border-radius: 40px;
-    background: #D9D9D9;
+    background: #515BBA;
     border-style: none;
     cursor: pointer;
-    color: #000;
     font-family: Inter;
     font-size: 20px;
     font-style: normal;
@@ -126,8 +126,31 @@ img.loginimage {
 
 form.formlogin {
     position: absolute;
-    margin-top: 75px;
+    margin-top: 40px;
 }
 
-
+h2.statementOR {
+    margin-right: 190px;
+    margin-top: 15px;
+    color: black;
+}
+button.buttonGoogle {
+    margin-right: 0px;
+    margin-top: 486px;
+    color: #FFFEFE;
+    width: 385px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #515BBA;
+    /* background: #D9D9D9; */
+    border-style: none;
+    cursor: pointer;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-align: center;
+}
 
