--- a/client/src/Component/Style/Signup.css
+++ b/client/src/Component/Style/Signup.css
@@ -136,6 +136,9 @@ h1.HeadingSignup {
     margin-right: 250px;
     margin-top: 120px;
 }
+.Signupbtn:hover{
+    border-radius: 5px;
+}
 
 img.signupimage {
     position: absolute;
@@ -167,4 +170,7 @@ button.logintopage {
     text-align: center;
     /* margin-right: 123px;
     margin-top: 120px; */
+}
+button.logintopage:hover{
+    border-radius: 5px;
 }
